# ministore

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ministore/: __init__.py  _adapters.py  _async.py  _base.py  _clause.py  _markers.py  _schema.py  _sql.py  _sync.py  _typemap.py  exceptions.py
tests/: models.py  test_async.py  test_markers.py  test_models.py  test_projection.py  test_schema.py  test_sync.py  test_transactions.py
